refactor: public routes
